<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rqt_joint_trajectory_controller</name>
  <version>0.0.1</version>
  <description>Graphical frontend for interacting with joint_trajectory_controller instances</description>
  <maintainer email="kevin.demarco@gmail.com">Kevin DeMarco</maintainer>
  <license>BSD</license>

  <exec_depend>python_qt_bindings</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
